<resources>
    <string name="app_name">Fiot</string>

    <string name="btDevice">设备</string>
    <string name="command">指令</string>
    <string name="mine">我的</string>
    <string name="add">添加</string>
    <string name="blank"> </string>
    <string name="temperature">℃</string>
    <string name="humidity">%</string>
    <string name="id">ID: </string>
    <string name="device_manager">设备管理</string>
    <string name="home_manager">家庭管理</string>
    <string name="room_manager">房间管理</string>
    <string name="scene_manager">场景管理</string>
    <string name="to"> </string>
    <string name="amount"> 数量 </string>
    <string name="discovery">扫描中</string>
    <string name="discovery_finish">扫描结束</string>

    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_account">用户名/账号/邮箱</string>
    <string name="login_username">设置用户名</string>
    <string name="login_default">点击头像登录</string>
    <string name="login_password">输入密码</string>
    <string name="login_confirm">确认密码</string>
    <string name="login_forget">忘记密码</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">扫码</string>
    <string name="state">状态</string>
    <string name="setting">设置</string>
    <string name="inbox">收件箱</string>
    <string name="avator">头像</string>
    <string name="empty_device">未选择控制设备</string>
    <string name="more">更多</string>
    <string name="config">配置</string>
    <string name="command_hex">0x</string>
    <string name="bluetooth_config">蓝牙配置</string>
    <string name="hex">十六进制收发数据</string>
    <string name="bluetooth_address">蓝牙地址</string>
    <string name="create_time">创建于:</string>
    <string name="auto_connect">自动连接</string>
    <string name="general_config">通用配置</string>
    <string name="display">主页展示</string>
    <string name="web_config">网络配置</string>
    <string name="save">保存</string>
    <string name="send">发送</string>
    <string name="wait">…</string>
    <string name="background">背景</string>
    <string name="close">关闭</string>
    <string name="none">空白</string>
    <string name="empty">( :\n暂无智能设备</string>
    <string name="upload">上传</string>
    <string name="init">设备正在初始化…</string>
    <string name="open">打开</string>
    <string name="move">移动</string>
    <string name="nickname">备注</string>
    <string name="remove">删除</string>
    <string name="done">确定</string>
    <string name="cancel">取消</string>
    <string name="temp">温度</string>
    <string name="humi">湿度</string>
    <string name="light">灯光</string>
    <string name="variety">变化趋势图</string>
    <string name="environment">温湿度控制</string>
    <string name="default_temp">22</string>
    <string name="up">升高</string>
    <string name="down">降低</string>
    <string name="on">开启</string>
    <string name="off">关闭</string>
    <string name="eco_on">ECO</string>
    <string name="normal">NORMAL</string>
    <string name="ud_wind">上下风</string>
    <string name="rl_wind">左右风</string>
    <string name="mode">模式</string>
    <string name="speed_wind">风速</string>
    <string name="cold">制冷</string>
    <string name="luminance">亮度</string>
    <string name="color">颜色</string>
    <string name="command_name">指令名称</string>
    <string name="device_select">选择设备</string>
    <string name="device_control">设备操作</string>
    <string name="hint_command">该指令发送的数据...</string>
    <string name="add_command">添 加 指 令</string>
    <string name="new_scene">添加场景</string>
    <string name="scene_sleep">场景睡觉</string>
    <string name="next">下一个</string>
    <string name="scene_name">场景名称</string>
    <string name="sentence_list">指令列表</string>
    <string name="scene_condition">触发条件</string>
</resources>