<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:elevation="16dp"
        android:background="@drawable/round_white">

        <TextView
            android:id="@+id/device_open"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:textSize="16sp"
            android:textColor="?attr/itemTextColor"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:text="@string/open"
            android:gravity="center|start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/device_move"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:textSize="16sp"
            android:textColor="?attr/itemTextColor"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:text="@string/move"
            android:gravity="center|start"
            app:layout_constraintTop_toBottomOf="@+id/device_open"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/device_nickname"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:textSize="16sp"
            android:textColor="?attr/itemTextColor"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:text="@string/nickname"
            android:gravity="center|start"
            app:layout_constraintTop_toBottomOf="@+id/device_move"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/device_remove"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:textSize="16sp"
            android:textColor="?attr/colorError"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:text="@string/remove"
            android:gravity="center|start"
            app:layout_constraintTop_toBottomOf="@+id/device_nickname"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>