<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ControlFragment">

    <data>
        <variable
            name="humidity"
            type="String" />
        <variable
            name="temperature"
            type="String" />
        <variable
            name="control_temperature"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_temp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:padding="12dp"
            android:background="@drawable/round_background"
            app:layout_constraintEnd_toStartOf="@+id/control_humi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/control_temp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:theme="@style/text_small"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.fireflyest.fiot.view.VerticalBar
                android:id="@+id/control_temp_bar"
                android:layout_width="18dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:progress="50"
                style="@android:style/Widget.ProgressBar.Horizontal"
                app:layout_constraintTop_toBottomOf="@+id/control_temp_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/control_temp_text"
                android:progressDrawable="@drawable/progress_temp"
                android:layout_marginEnd="22dp" />

            <TextView
                android:id="@+id/control_temp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{temperature}"
                android:hint="@string/default_temp"
                android:textStyle="bold"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toEndOf="@+id/control_temp_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/control_temp_unit"/>

            <TextView
                android:id="@+id/control_temp_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                app:layout_constraintStart_toEndOf="@+id/control_temp_value"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_humi"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="12dp"
            android:background="@drawable/round_background"
            app:layout_constraintStart_toEndOf="@+id/control_temp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/control_data" >

            <TextView
                android:id="@+id/control_humi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humi"
                android:theme="@style/text_small"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.fireflyest.fiot.view.VerticalBar
                android:id="@+id/control_humi_bar"
                android:layout_width="18dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:progress="50"
                style="@android:style/Widget.ProgressBar.Horizontal"
                app:layout_constraintTop_toBottomOf="@+id/control_humi_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/control_humi_text"
                android:progressDrawable="@drawable/progress_humi"
                android:layout_marginEnd="22dp" />

            <TextView
                android:id="@+id/control_humi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{humidity}"
                android:hint="@string/default_temp"
                android:textStyle="bold"
                android:layout_marginStart="6dp"
                app:layout_constraintStart_toEndOf="@+id/control_humi_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/control_humi_unit"/>

            <TextView
                android:id="@+id/control_humi_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                app:layout_constraintStart_toEndOf="@+id/control_humi_value"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_data"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:padding="12dp"
            android:background="@drawable/round_background"
            app:layout_constraintStart_toEndOf="@+id/control_humi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/control_data_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/variety"
                android:theme="@style/text_small"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_environment"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:padding="12dp"
            android:background="@drawable/round_background"
            app:layout_constraintTop_toBottomOf="@+id/control_temp">

            <TextView
                android:id="@+id/control_environment_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/environment"
                android:theme="@style/text_small"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cold"
                android:layout_marginEnd="22dp"
                app:layout_constraintEnd_toStartOf="@+id/control_environment_temp"
                app:layout_constraintBaseline_toBaselineOf="@+id/control_environment_temp"/>

            <TextView
                android:id="@+id/control_environment_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/default_temp"
                android:textSize="72sp"
                android:textStyle="bold"
                android:text="@{control_temperature}"
                android:textColor="?attr/itemTextColor"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                app:layout_constraintStart_toEndOf="@+id/control_environment_temp"
                app:layout_constraintBaseline_toBaselineOf="@+id/control_environment_temp"/>

            <ImageButton
                android:id="@+id/control_environment_temp_up"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_up"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@+id/control_environment_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/control_environment_temp_down"
                android:contentDescription="@string/up" />

            <ImageButton
                android:id="@+id/control_environment_temp_down"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/down"
                android:src="@drawable/ic_down"
                app:layout_constraintBottom_toBottomOf="@+id/control_environment_mode"
                app:layout_constraintEnd_toEndOf="@+id/control_environment_temp_up"
                app:layout_constraintStart_toStartOf="@+id/control_environment_temp_up" />

            <ToggleButton
                android:id="@+id/control_environment_power"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:textOn="@string/on"
                android:textOff="@string/off"
                app:layout_constraintTop_toTopOf="@+id/control_environment_temp_up"
                app:layout_constraintStart_toStartOf="parent"/>

            <ToggleButton
                android:id="@+id/control_environment_eco"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textOn="@string/eco_on"
                android:textOff="@string/eco_on"
                app:layout_constraintTop_toTopOf="@+id/control_environment_power"
                app:layout_constraintStart_toEndOf="@+id/control_environment_power"/>

            <ToggleButton
                android:id="@+id/control_environment_ud"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textOn="@string/ud_wind"
                android:textOff="@string/ud_wind"
                app:layout_constraintTop_toBottomOf="@+id/control_environment_power"
                app:layout_constraintStart_toStartOf="@+id/control_environment_power"/>

            <ToggleButton
                android:id="@+id/control_environment_rl"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textOn="@string/rl_wind"
                android:textOff="@string/rl_wind"
                app:layout_constraintTop_toBottomOf="@+id/control_environment_power"
                app:layout_constraintStart_toEndOf="@+id/control_environment_power"/>

            <ToggleButton
                android:id="@+id/control_environment_mode"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginBottom="22dp"
                android:textOn="@string/mode"
                android:textOff="@string/mode"
                app:layout_constraintTop_toBottomOf="@+id/control_environment_ud"
                app:layout_constraintStart_toStartOf="@+id/control_environment_power"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ToggleButton
                android:id="@+id/control_environment_speed"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:textOn="@string/speed_wind"
                android:textOff="@string/speed_wind"
                app:layout_constraintBottom_toBottomOf="@+id/control_environment_mode"
                app:layout_constraintStart_toEndOf="@+id/control_environment_power"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_luminance"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/round_background"
            app:layout_constraintTop_toBottomOf="@+id/control_environment"
            android:layout_marginTop="22dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/control_luminance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luminance"
                android:theme="@style/text_small"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.fireflyest.fiot.view.TextSwitch
                android:id="@+id/control_luminance_value"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="22dp"
                android:clickable="false"
                app:barColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_light"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/round_background"
            app:layout_constraintTop_toBottomOf="@+id/control_luminance"
            android:layout_marginTop="22dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/control_light_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:theme="@style/text_small"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.fireflyest.fiot.view.WhiteBar
                android:id="@+id/control_light_bar"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="22dp"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progress="50"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/control_color"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/round_background"
            app:layout_constraintTop_toBottomOf="@+id/control_light"
            android:layout_marginTop="22dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/control_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:theme="@style/text_small"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.fireflyest.fiot.view.ColorfulBar
                android:id="@+id/control_color_red"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="22dp"
                android:progress="50"
                style="@android:style/Widget.ProgressBar.Horizontal"
                app:layout_constraintTop_toBottomOf="@+id/control_color_text"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.fireflyest.fiot.view.ColorfulBar
                android:id="@+id/control_color_green"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="12dp"
                android:progress="50"
                style="@android:style/Widget.ProgressBar.Horizontal"
                app:layout_constraintTop_toBottomOf="@+id/control_color_red"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.fireflyest.fiot.view.ColorfulBar
                android:id="@+id/control_color_blue"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="12dp"
                android:progress="50"
                style="@android:style/Widget.ProgressBar.Horizontal"
                app:layout_constraintTop_toBottomOf="@+id/control_color_green"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>