<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/login_motion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/shape_gray_white"
        app:layoutDescription="@xml/activity_login_scene">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/ic_logo"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />

        <com.fireflyest.fiot.view.TextSwitch
            android:id="@+id/login_switch"
            android:layout_width="180dp"
            android:layout_height="52dp"
            app:barWidth="3dp"
            app:barColor="?attr/colorPrimaryVariant"
            app:barLength="18dp"
            app:layout_constraintTop_toTopOf="@+id/toolbar_sub"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_sub"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.fireflyest.fiot.view.IconEditText
            android:id="@+id/login_account"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            app:iconName="account"
            android:layout_marginHorizontal="32dp"
            android:autofillHints=""
            android:inputType="text"
            android:textAlignment="center"
            android:background="@drawable/round_white"
            android:hint="@string/login_account"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

        <com.fireflyest.fiot.view.IconEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_account"
            app:iconName="password"
            android:layout_marginHorizontal="32dp"
            android:autofillHints=""
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_marginTop="22dp"
            android:hint="@string/login_password"
            android:background="@drawable/round_white"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

        <com.fireflyest.fiot.view.IconEditText
            android:id="@+id/login_confirm"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            app:iconName="password"
            android:layout_marginHorizontal="32dp"
            android:autofillHints=""
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_marginTop="22dp"
            android:hint="@string/login_confirm"
            android:background="@drawable/round_white"
            android:enabled="false"
            android:textSize="16sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            android:layout_marginTop="10dp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/login_forget"/>

        <ImageView
            android:id="@+id/login_button"
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/circle_primary"
            android:src="@drawable/ic_forward"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="120dp"
            android:contentDescription="@string/login_login" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>